# TitleFinder

./: .clang-format  CMakeLists.txt  Dockerfile  titlefinderConfig.cmake.in
cli/: CMakeLists.txt  application.cpp  application.hpp  none.cpp  none.hpp  parser.cpp  parser.hpp  rename.cpp  rename.hpp  scan.cpp  scan.hpp  search.cpp  search.hpp  subapp.cpp  subapp.hpp  titlefinder_cli.cpp
lib/: CMakeLists.txt
lib/api/: CMakeLists.txt  authentication.cpp  authentication.hpp  curl.cpp  curl.hpp  exception.hpp  genres.cpp  genres.hpp  logger.cpp  logger.hpp  optionals.hpp  response.hpp  search.cpp  search.hpp  structs.hpp  tmdb.cpp  tmdb.hpp  tv.cpp  tv.hpp  tvseasons.cpp  tvseasons.hpp
lib/explorer/: CMakeLists.txt  discriminator.cpp  discriminator.hpp  engine.cpp  engine.hpp  levenshtein.cpp  levenshtein.hpp  logger.cpp  logger.hpp  namefilter.cpp  namefilter.hpp  versions.cpp  versions.hpp
lib/logger/: CMakeLists.txt  logger.cpp  logger.hpp
lib/media/: CMakeLists.txt  file.cpp  file.hpp  fileinfo.cpp  fileinfo.hpp  logger.cpp  logger.hpp  mkvmux.cpp  mkvmux.hpp  muxer.cpp  muxer.hpp  tags.hpp
